[project]
name = "refract-api"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
