[project]
name = "reprompt-api"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "cryptography>=42.0.0",
    "fastapi",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]",
    "reprompt-core",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.uv.sources]
reprompt-core = { path = "../../packages/core", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
